--- a/Frontend/src/assets/css/app.scss
+++ b/Frontend/src/assets/css/app.scss
@@ -12,6 +12,14 @@
     left: -30px;
     width: 100px !important;
     height: 100px !important;
+
+    @media (max-width: 599px) {
+      position: absolute;
+      top: 5px;
+      left: 10px;
+      width: 60px !important;
+      height: 60px !important;
+    }
   }
 
   .image-meta-infos {
@@ -20,17 +28,22 @@
   }
 
   .div-image-description {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    z-index: 2;
+    @media (min-width: 600px) {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      z-index: 2;
+    }
   }
 
   .preview {
     border-radius: 4px;
     object-fit: cover;
     width: 100%;
-    height: 600px;
+    @media (min-width: 600px) {
+      height: 600px;
+    }
+
   }
 }
