--- a/Frontend/src/assets/css/app.scss
+++ b/Frontend/src/assets/css/app.scss
@@ -1,80 +1,16 @@
-.card-size {
-  width: 600px !important;
-  margin: auto;
-}
+@import "utils/variables";
+@import "utils/colors";
 
-.div-post {
-  margin-top: 40px;
+@import "components/comments";
+@import "components/main";
+@import "components/navbar";
+@import "components/posts";
+@import "components/sidebar";
 
-  @media (max-width: 599px) {
-    margin-top: 10px;
-  }
-}
-
-.card-post {
-  width: 600px;
-
-  .div-image-meta .card-actions{
-    @media (max-width: 599px) {
-      flex-direction: column;
-    }
-
-    .btn-edit {
-      @media (max-width: 599px) {
-        margin-bottom: 5px;
-        margin-right: 0 !important;
-      }
-    }
-  }
-
-  .image-meta {
-    @media (max-width: 599px) {
-      align-items: center;
-    }
-  }
-
-  .image-meta-avatar {
-    position: absolute;
-    top: -30px;
-    left: -30px;
-    width: 100px !important;
-    height: 100px !important;
-
-    @media (max-width: 599px) {
-      position: initial;
-      width: 60px !important;
-      height: 60px !important;
-    }
-  }
-
-  .image-meta-infos {
-    position: relative;
-    left: 70px;
-
-    @media (max-width: 599px) {
-      position: initial;
-    }
-  }
-
-  .div-image-description {
-    @media (min-width: 600px) {
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 0;
-      z-index: 2;
-    }
-  }
-
-  .preview {
-    border-radius: 4px;
-    object-fit: cover;
-    width: 100%;
-    @media (min-width: 600px) {
-      height: 600px;
-    }
-  }
-}
+@import "pages/admin";
+@import "pages/admin-users";
+@import "pages/auth";
+@import "pages/user";
 
 .btn-show-comments {
   @media (max-width: 599px) {
