FRONTEND - ajout d'un component pour l'ajout d'une image via modal - suppression de l'icone ajout dans la navbarre

--- a/Frontend/src/assets/css/app.scss
+++ b/Frontend/src/assets/css/app.scss
@@ -5,11 +5,14 @@
 @import "components/main";
 @import "components/navbar";
 @import "components/posts";
+@import "components/home-header";
+@import "components/dialog-crop";
 @import "components/sidebar";
 
 @import "pages/admin";
 @import "pages/admin-users";
 @import "pages/auth";
+@import "pages/home";
 @import "pages/user";
 
 .btn-show-comments {
