BACKEND + FRONTEND - mise en place d'une searchbarre

--- a/Frontend/src/assets/css/app.scss
+++ b/Frontend/src/assets/css/app.scss
@@ -7,6 +7,7 @@
 @import "components/posts";
 @import "components/home-header";
 @import "components/dialog-crop";
+@import "components/search-users";
 @import "components/sidebar";
 
 @import "pages/admin";
