BACKEND - mise en place de role admin et modo - ajout de last name et first name pour les users - correction bug connection lorque la date de ban est null - mise ne place de la recherche user et admin - mise ne place d'index pour lastname et firstname user FRONTEND - mise en place des snackbarre erreur - mise en place du titre des pages - chagement de la favicone - attribution et supression du role modo - modification du searchStore pour admin_search - connexion lorsque l'on appuie sur enter - suppression des Vues inuties

--- a/Frontend/src/assets/css/app.scss
+++ b/Frontend/src/assets/css/app.scss
@@ -7,7 +7,7 @@
 @import "components/posts";
 @import "components/home-header";
 @import "components/dialog-crop";
-@import "components/search-users";
+@import "components/search-nav";
 @import "components/sidebar";
 
 @import "pages/admin";
@@ -20,4 +20,8 @@
   @media (max-width: 599px) {
     margin-top: 5px;
   }
+}
+
+a.v-btn, a.v-btn:hover {
+  text-decoration: none !important;
 }
