BACKEND - mise en place de la transaction pour la suppression d'un utilisateur - création des seeders likes et answers - création d'un function getRandomUniqInt
FRONTEND
- ajout d'un bouton close dans le modal de création d'image
- nettoyage du store
-

--- a/Frontend/src/assets/css/app.scss
+++ b/Frontend/src/assets/css/app.scss
@@ -4,6 +4,7 @@
 @import "components/comments";
 @import "components/main";
 @import "components/navbar";
+@import "components/paginate";
 @import "components/posts";
 @import "components/home-header";
 @import "components/dialog-crop";
