BACKEND - Role par defaut null - Affichage d'erreur si problème d'update du profil - correction d'un bug dans le middleware isAllowed - delete onCascade des Answer
FRONTEND
- ajout de la suppression et modif de commentaire
- ajout de la modif des réponses
-

--- a/Frontend/src/assets/css/app.scss
+++ b/Frontend/src/assets/css/app.scss
@@ -15,6 +15,7 @@
 @import "pages/admin-users";
 @import "pages/auth";
 @import "pages/home";
+@import "pages/profil";
 @import "pages/user";
 
 .btn-show-comments {
