BACKEND - Déplacement de la vréification de l'adresse mail uniq dans le middleware valideData - ajout des lastname et firstname pour le retour user - mis en place de l'affichage des erreurs sequelise - Traduction des messages Joi - correction des bug modif profil - mise en place d'une verif des parametre get - confirm password rendu obligatoire
FRONTEND
- responsive de la snackbar
- design de la page post comme cela de la home et adapation au responsive
- renomage du dossier utils en helpers
- création du helper auth
- correction du bug du changement de couleur lors de la fermeture de la snackbar
- correction des bug lors de l'inscription et de la connexion
- adaptation de l'update profil au lastname et firstname
-

--- a/Frontend/src/assets/css/app.scss
+++ b/Frontend/src/assets/css/app.scss
@@ -10,11 +10,13 @@
 @import "components/dialog-crop";
 @import "components/search-nav";
 @import "components/sidebar";
+@import "components/snackbar";
 
 @import "pages/admin";
 @import "pages/admin-users";
 @import "pages/auth";
 @import "pages/home";
+@import "pages/post";
 @import "pages/profil";
 @import "pages/user";
 
