- correction des bugs admin - mise en place d'erreur front - mise en place de la suppression des commentaires - suppression du compte supprimé - création d'un compte banis - mise en place de nom et prénom aléatoir - mise en place d'une verif backend des images - mise en place de setter pour le firstname et lastname - mise en place de la responsivité de la création d'un article - ne pas faire de requete server si le slug n'est pas bon - mise en place d'une verif front end pour les images - mise en place d'une verif regexp frontend -

--- a/Frontend/src/assets/css/app.scss
+++ b/Frontend/src/assets/css/app.scss
@@ -2,6 +2,7 @@
 @import "utils/colors";
 
 @import "components/comments";
+@import "components/form-article";
 @import "components/main";
 @import "components/navbar";
 @import "components/paginate";
