BACKEND - correction du bug ou le server ne renvoi pas les roles lors de l'inscription - gestion des erreurs et commentaire dans postController - gestion des erreur dans auth, - traduction des erreurs lié au type de post - suppression du champ supp dans la table user - passage du slug de allowNull a required - getter roles model user : retourner array vide si undefined - correction du shema de validation joi pour les Post - mise en place du docker - correction des bug de dépendence FRONTEND - correction du css et responsive - nettoyage du code - utilisation du slug pour l'update article - suppression du css en bas des fichier Vue - gestion des erreurs - correction du bug d'upload image dans les article - ajout du type lors de l'update d'une image / article -

--- a/Frontend/src/assets/css/app.scss
+++ b/Frontend/src/assets/css/app.scss
@@ -2,13 +2,13 @@
 @import "utils/colors";
 
 @import "components/comments";
+@import "components/create-image";
 @import "components/form-article";
 @import "components/main";
 @import "components/navbar";
 @import "components/paginate";
 @import "components/posts";
 @import "components/home-header";
-@import "components/dialog-crop";
 @import "components/search-nav";
 @import "components/sidebar";
 @import "components/snackbar";
