--- a/Frontend/src/assets/css/components/_comments.scss
+++ b/Frontend/src/assets/css/components/_comments.scss
@@ -22,6 +22,7 @@
       @media (max-width: 625px) {
         flex-direction: column;
         align-items: initial;
+        justify-content: center;
       }
     }
 
@@ -38,10 +39,26 @@
     display: flex;
     margin-left: 60px;
 
-    @media (max-width: 599px) { margin-left: 0; }
+    @media (max-width: 599px) { margin-left: 0 !important; }
 
     .answer {
       @media (max-width: 599px) { flex: 1; }
+    }
+  }
+
+  .card-actions {
+    button {
+      height: 30px;
+      width: 30px;
+    }
+
+    i { font-size: 20px; }
+
+    @media (max-width: 599px) {
+      flex-direction: column;
+
+      button { margin-right: 0 !important; }
+      > :first-child { margin-bottom: 5px; }
     }
   }
 }
