BACKEND - ne pas supprimer l'image si c'est post_3.webp - correction des problèmes de docker FRONTEND - correction des problèmes de design dans les commentaires - ajout de la confirmation de suppression dans les commentaires

--- a/Frontend/src/assets/css/components/_comments.scss
+++ b/Frontend/src/assets/css/components/_comments.scss
@@ -42,7 +42,15 @@
     @media (max-width: 599px) { margin-left: 0 !important; }
 
     .answer {
-      @media (max-width: 599px) { flex: 1; }
+      flex: 1;
+
+      @media (max-width: 599px) {
+        .btns-action button {
+          font-size: 0.7rem;
+          height: 30px;
+          padding: 12px;
+        }
+      }
     }
   }
 
