--- a/Frontend/src/assets/css/components/_main.scss
+++ b/Frontend/src/assets/css/components/_main.scss
@@ -1,5 +1,5 @@
 .container-main {
   position: relative;
-  background: url("/images/auth-background.jpg") fixed;
+  background: url("/asset/images/background.jpg") fixed;
   background-size: cover;
 }
