--- a/Frontend/src/assets/css/components/_posts.scss
+++ b/Frontend/src/assets/css/components/_posts.scss
@@ -31,6 +31,7 @@
       }
     }
 
+    .article-header { width: 100%}
     .post-meta {
       @media (max-width: 599px) {
         align-items: center;
