--- a/Frontend/src/assets/css/pages/_profil.scss
+++ b/Frontend/src/assets/css/pages/_profil.scss
@@ -1,7 +1,12 @@
 .container-profil {
-  h1 {
+  h1.security-title{
+    @media (max-width: 599px) { font-size: 1.2rem }
+  }
+
+  h1.infos-title{
     @media (max-width: 599px) { font-size: 1.5rem }
   }
+
   .v-avatar {
     height: 200px;
     width: 200px;
